--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
   <div class="header">
-    <a href="index.html" class="logo">
-      <img src="logo.svg">
-    </a>
-    <div class="header-right">
-      <a class="active" href="#home">Home</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-    </div>
+    <div style="max-width: 1200px; margin: 0 auto;">
+      <a href="index.html" class="logo">
+        <img src="logo.svg">
+      </a>
+      <div class="header-right">
+        <a class="active" href="index.html">Home</a>
+        <a class="inactive" href="#courses">Courses</a>
+        <a class="inactive" href="#process">Process</a>
+      </div>
+  </div>
   </div>
   <div class="hero-image">
     <div class="hero-text">
@@ -26,7 +28,7 @@
   </div>
   <div style="max-width: 1200px; padding: 0 20px 0 20px; margin: 0 auto;">
     <div>
-      <h1>Featured Courses</h1>
+      <h1 id="courses">Featured Courses</h1>
       <div class="row">
       <div class="column">
         <div class="card">
@@ -66,7 +68,7 @@
     </div>
   </div>
   <hr class="solid">
-  <h1>The Process</h1>
+  <h1 id="process">The Process</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris faucibus scelerisque urna, eget faucibus massa pharetra ut. Nulla nec diam vitae velit volutpat laoreet. Duis non velit nec velit consequat porttitor. Pellentesque auctor, felis ac ultricies auctor, lacus lorem mollis lectus, a placerat nibh quam id dui.</p>
   <div style="width: 100%">
     <button type="button" class="collapsible">Registration</button>
@@ -118,7 +120,19 @@
     }
   }
 
+  function setActiveMenuItem() {
+    let menus = document.querySelectorAll(".header-right a")
+
+    menus.forEach(menu => {
+      menu.addEventListener("click", () => {
+        document.querySelector(".active").className = "inactive"
+        menu.className = "active"
+      })
+    })
+  }
+
   document.addEventListener('load', toggleCollapse())
+  document.addEventListener('load', setActiveMenuItem())
 </script>
 </body>
 </html>
